--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -2,9 +2,6 @@
 <html>
      <head>
           <meta charset="utf-8">
-          <title>index</title>
+          <title>##titulo##</title>
      </head>
      <body>
-
-     </body>
-</html>
