login y comienzo de estructuración de página principal

--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -6,3 +6,13 @@
           <title>##titulo##</title>
      </head>
      <body>
+     <div class="navigation-bar">
+          <ul>
+               <li  class="navbaritems-left"><a href="controlador.php?accion=index&id=1">home</a></li>
+               <li  class="navbaritems-left"><a href="#">...</a></li>
+               <li  class="navbaritems-left"><a href="#">...</a></li>
+               <li  class="navbaritems-right"><a href="controlador.php?accion=login&id=1">login</a></li>
+               <li  class="navbaritems-right"><a href="controlador.php?accion=registro&id=1">registro</a></li>
+          </ul>
+     </div>
+     <div>
