--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,33 @@
-.letraroja{
-     color:red;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+.letraroja {
+    color: red;
+}
+
+.navigation-bar ul {
+    overflow: hidden;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #333;
+}
+
+.navigation-bar a {
+    display: block;
+    padding: 8px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #eee;
+}
+
+.navbaritems-left {
+    float: left;
+}
+
+.navbaritems-right {
+    float: right;
 }
