--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -15,4 +15,4 @@
                <li  class="navbaritems-right"><a href="controlador.php?accion=registro&id=1">registro</a></li>
           </ul>
      </div>
-     <div>
+     <div class="contenido">
