--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@
     font-family: "Roboto", sans-serif;
 }
 
+*:focus {
+     outline: none;
+}
+
 .contenido {
     padding-top: 50px;
     /* Depende del tamaño de la cabecera*/
