--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,14 @@
+<div class="navigation-bar">
+       <ul>
+             <li class="navbaritems-left"><a href="controlador.php?accion=index&id=1">home</a></li>
+             <li class="navbaritems-left"><a href="controlador.php?accion=catalogo&id=1">catalogo</a></li>
+             <li class="navbaritems-left"><a href="controlador.php?accion=localizacion&id=1">localización</a></li>
+             <li class="navbaritems-left"><a href="controlador.php?accion=servicios&id=1">servicios</a></li>
+             <li class="navbaritems-right"><a href="controlador.php?accion=login&id=1">login</a></li>
+             <li class="navbaritems-right"><a href="controlador.php?accion=registro&id=1">registro</a></li>
+       </ul>
+</div>
+<div class="contenido">
 <form action="/login.php" method="post">
        <input type="email" name="mail" id="mail" placeholder="Email">
        <br>
