--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,11 @@
     float: right;
 }
 
+.active {
+    background-color: #333;
+    color: #fff
+}
+
 
 /***************************************************
  * Fin barra navegación****************************
