--- a/templates/localizacion.html
+++ b/templates/localizacion.html
@@ -2,7 +2,7 @@
        <ul>
               <li class="navbaritems-left"><a href="controlador.php?accion=index&id=1">home</a></li>
               <li class="navbaritems-left"><a href="controlador.php?accion=catalogo&id=1">catalogo</a></li>
-              <li class="navbaritems-left"><a href="controlador.php?accion=localizacion&id=1">localización</a></li>
+              <li class="navbaritems-left active"><a href="controlador.php?accion=localizacion&id=1">localización</a></li>
               <li class="navbaritems-left"><a href="controlador.php?accion=servicios&id=1">servicios</a></li>
               <li class="navbaritems-right"><a href="controlador.php?accion=login&id=1">login</a></li>
               <li class="navbaritems-right"><a href="controlador.php?accion=registro&id=1">registro</a></li>
