--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 </div>
 <div class="contenido">
 <form action="/login.php" method="post">
-       <input type="email" name="mail" id="mail" placeholder="Email">
+       <input type="email" name="email" id="email" placeholder="Email">
        <br>
        <input type="password" name="password" id="pass1" placeholder="Contraseña">
        <br>
