he arreglado una cosilla de localización

--- a/templates/localizacion.html
+++ b/templates/localizacion.html
@@ -15,7 +15,7 @@
       <li><a href="mailto:colordigital@colordigital.es">Mail: colordigital@colordigital.es</a></li>
       <li>Localización: Calle Fuente del Hierro, 31, 31008 Pamplona, Navarra, España</li>
    </ul>
-   <form class="" action="index.html" method="post">
+   <form class="" action="controlador.php?accion=localizacion&id=1" method="post">
       <textarea name="contacto" placeholder="Envianos tus comentarios!" rows="10" cols="30"></textarea><br>
       <input type="submit" onclick="alert('Enviado!')" value="Enviar" />
    </form>
