ya funciona fino fino el login, me voy a meter con sesiones

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,9 +10,13 @@
 </div>
 <div class="contenido">
 <form action="/login.php" method="post">
-       <input type="email" name="email" id="email" placeholder="Email">
+       <input type="text" name="email" id="email" placeholder="Usuario o Email">
        <br>
        <input type="password" name="password" id="pass1" placeholder="Contraseña">
        <br>
-       <input type="submit" name="submit" value="Registrar">
+       <input type="submit" name="submit" value="Log in">
 </form>
+
+<div class="letraroja">
+      ##loginfailed##
+</div>
