--- a/templates/registro.html
+++ b/templates/registro.html
@@ -24,6 +24,9 @@
        <input type="submit" name="submit" value="Registrar">
 </form>
 
+<div class="letraroja">
+      ##regfailed##
+</div>
           <script>
                permitir;
                function validateForm() {
