se había quedado una referencia a una función antigua

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,5 +1,5 @@
 <form action="/registro.php" method="post" onsubmit="return validateForm()">
-       <input type="text" name="user" id="user" placeholder="Usuario" onkeyup="checkuser">
+       <input type="text" name="user" id="user" placeholder="Usuario">
        <br>
        <div id="maluser" name="maluser" class="letraroja">
 
