he dejado majicos el registro y el login

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,12 @@
-<form action="/login.php" method="post">
+<form class="centered-form" action="/login.php" method="post">
+
+       <div class="letraroja">
+              ##loginfailed##
+       </div>
+
        <input type="text" name="email" id="email" placeholder="Usuario o Email">
        <br>
        <input type="password" name="password" id="pass1" placeholder="Contraseña">
        <br>
        <input type="submit" name="submit" value="Log in">
 </form>
-
-<div class="letraroja">
-      ##loginfailed##
-</div>
