--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,9 +8,25 @@
      outline: none;
 }
 
+
 .contenido {
-    padding-top: 50px;
-    /* Depende del tamaño de la cabecera*/
+    padding-top: 50px; /* Depende del tamaño de la cabecera*/
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.fondo { /* La cosita gris */
+     position:fixed;
+     height: 10000px;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    overflow:hidden;
+    z-index:-1; /*Para que esté en el fondo*/
+    margin-left: 15%;
+    margin-right: 15%;
+    background-color: #eee;
 }
 
 .letraroja {
@@ -66,3 +82,13 @@
 /***************************************************
  * Fin barra navegación****************************
  ***************************************************/
+
+ /* Formulario centrado */
+ .centered-form {
+      margin: 10% 30%;
+}
+
+.centered-form input {
+     display: block;
+     width: 100%;
+}
