--- a/templates/localizacion.html
+++ b/templates/localizacion.html
@@ -2,7 +2,7 @@
        <!-- TODO: Cambiar Mostrar por Ocultar cuando se haga click -->
        <button class="buttonLoc">Mostrar Localización</button>
        <iframe class="iframeLoc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2927.1207210416023!2d-1.6591616850857678!3d42.80693491475648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092675e980843%3A0x435b59ffa04b0944!2sCOLOR+DIGITAL!5e0!3m2!1ses!2ses!4v1487756331164"
-           width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
+         allowfullscreen>
         </iframe>
 
 </div>
