--- a/templates/localizacion.html
+++ b/templates/localizacion.html
@@ -1,38 +1,35 @@
 <div class="columnleft">
-       <!-- TODO: Cambiar Mostrar por Ocultar cuando se haga click -->
-       <button class="buttonLoc">Mostrar Localización</button>
-       <iframe class="iframeLoc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2927.1207210416023!2d-1.6591616850857678!3d42.80693491475648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092675e980843%3A0x435b59ffa04b0944!2sCOLOR+DIGITAL!5e0!3m2!1ses!2ses!4v1487756331164"
-         allowfullscreen>
-        </iframe>
-
+  <button class="buttonLoc" id='botoniframe' onclick="clicklocalizacion()">Ocultar Localización</button>
+  <br>
+  <div class="iframecontainer">
+    <iframe class="iframeLoc" id="iframegmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2927.1207210416023!2d-1.6591616850857678!3d42.80693491475648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092675e980843%3A0x435b59ffa04b0944!2sCOLOR+DIGITAL!5e0!3m2!1ses!2ses!4v1487756331164"
+      allowfullscreen>
+    </iframe>
+  </div>
 </div>
 
 <div class="columnright">
-
-       <ul>
-              <li>Horario: Lu-Vi: 09-14:00 16:30–20:00</li>
-              <li>Telefono: +34 948 17 71 32</li>
-              <li><a href="mailto:colordigital@colordigital.es">Mail: colordigital@colordigital.es</a></li>
-              <li>Localización: Calle Fuente del Hierro, 31, 31008 Pamplona, Navarra, España</li>
-       </ul>
-       <form class="" action="controlador.php?accion=localizacion&id=1" method="post">
-              <textarea name="contacto" placeholder="Envianos tus comentarios!" rows="10" cols="30"></textarea><br>
-              <input type="submit" onclick="alert('Enviado!')" value="Enviar" />
-       </form>
-
+  <ul>
+    <li>Horario: Lu-Vi: 09-14:00 16:30–20:00</li>
+    <li>Telefono: +34 948 17 71 32</li>
+    <li><a href="mailto:colordigital@colordigital.es">Mail: colordigital@colordigital.es</a></li>
+    <li>Localización: Calle Fuente del Hierro, 31, 31008 Pamplona, Navarra, España</li>
+  </ul>
+  <form class="" action="controlador.php?accion=localizacion&id=1" method="post">
+    <textarea name="contacto" placeholder="Envianos tus comentarios!" rows="10" cols="30"></textarea><br>
+    <input type="submit" onclick="alert('Enviado!')" value="Enviar" />
+  </form>
 </div>
 
-<!-- TODO: Sacar javascript de aqui.PD: NO funciona-->
+<!-- TODO: Sacar javascript de aqui-->
 <script type="text/javascript">
-       function hideToggle(button, elem) {
-              $(button).toggle(
-                     function() {
-                            $(elem).hide();
-                     },
-                     function() {
-                            $(elem).show();
-                     }
-              );
-       }
-       hideToggle("buttonLoc", ".iframeLoc")
+  function clicklocalizacion() {
+    if (document.getElementById('botoniframe').textContent != 'Mostrar Localizacion') {
+      document.getElementById('iframegmaps').style.visibility = 'hidden';
+      document.getElementById('botoniframe').textContent = 'Mostrar Localizacion';
+    } else {
+      document.getElementById('iframegmaps').style.visibility = 'visible';
+      document.getElementById('botoniframe').textContent = 'Ocultar Localizacion';
+    }
+  }
 </script>
