Diseño adaptado a móvil

--- a/templates/core/footer.html
+++ b/templates/core/footer.html
@@ -1,3 +1,13 @@
-          </div>
-     </body>
+    </div>
+    <script type="text/javascript">
+      function botonmenu() {
+        var navbar = document.getElementById("navigation-bar");
+        if (navbar.style.display != "inline") {
+          navbar.style.display = "inline";
+        } else {
+          navbar.style.display = "none";
+        }
+      }
+    </script>
+  </body>
 </html>
