--- a/templates/localizacion.html
+++ b/templates/localizacion.html
@@ -1,9 +1,7 @@
 <div class="columnleft">
-  <button class="buttonLoc" id='botoniframe' onclick="clicklocalizacion()">Ocultar Localización</button>
-  <br>
   <div class="iframecontainer">
-    <iframe class="iframeLoc" id="iframegmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2927.1207210416023!2d-1.6591616850857678!3d42.80693491475648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092675e980843%3A0x435b59ffa04b0944!2sCOLOR+DIGITAL!5e0!3m2!1ses!2ses!4v1487756331164"
-      allowfullscreen>
+    <iframe class="iframeLoc"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2927.1207210416023!2d-1.6591616850857678!3d42.80693491475648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092675e980843%3A0x435b59ffa04b0944!2sCOLOR+DIGITAL!5e0!3m2!1ses!2ses!4v1487756331164"
+      allowfullscreen frameborder="0">
     </iframe>
   </div>
 </div>
@@ -20,16 +18,3 @@
     <input type="submit" onclick="alert('Enviado!')" value="Enviar" />
   </form>
 </div>
-
-<!-- TODO: Sacar javascript de aqui-->
-<script type="text/javascript">
-  function clicklocalizacion() {
-    if (document.getElementById('botoniframe').textContent != 'Mostrar Localizacion') {
-      document.getElementById('iframegmaps').style.visibility = 'hidden';
-      document.getElementById('botoniframe').textContent = 'Mostrar Localizacion';
-    } else {
-      document.getElementById('iframegmaps').style.visibility = 'visible';
-      document.getElementById('botoniframe').textContent = 'Ocultar Localizacion';
-    }
-  }
-</script>
