--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,4 @@
 <form class="centered-form" action="/login.php" method="post">
-
        <div class="letraroja">
               ##loginfailed##
        </div>
@@ -10,3 +9,6 @@
        <br>
        <input type="submit" name="submit" value="Log in">
 </form>
+<div class="onlymobile">
+    <a href="controlador.php?accion=registro&id=1"> O registrate</a>
+</div>
