--- a/templates/registro.html
+++ b/templates/registro.html
@@ -31,6 +31,10 @@
        <input type="submit" name="submit" value="Registrar">
 </form>
 
+<div class="onlymobile">
+    <a href="controlador.php?accion=login&id=1">Ya tengo usuario.</a>
+</div>
+
 
 <script>
        permitir = false;
