ahora la navbar no se queda oculta tras click en botón y cambio de tamaño

--- a/templates/core/footer.html
+++ b/templates/core/footer.html
@@ -5,7 +5,7 @@
         if (navbar.style.display != "inline") {
           navbar.style.display = "inline";
         } else {
-          navbar.style.display = "none";
+          navbar.style.display = "";
         }
       }
     </script>
