--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,7 @@
 }
 
 .navigation-bar {
+ display: inline;
   z-index: 100;
   position: fixed;
   width: 100%;
@@ -150,7 +151,7 @@
 
 /******************************************************************/
 
-@media only screen and (min-width: 320px) and (max-width: 480px) {
+@media /*only*/ screen and (min-width: 240px) and (max-width: 480px) {
   /* iPhone, Android rules here */
   .centered-form {
     margin: 10% 0;
@@ -213,7 +214,15 @@
     outline: 0;
   }
   .botonlogin {
-    background: url(/static/images/login.png) no-repeat;/*hay que cambiar esto a logout si el usuario ha iniciado sesió*/
+       background: url(/static/images/login.png) no-repeat;
+ }
+
+.botonlogout {
+     background: url(/static/images/logout.png) no-repeat;
+
+}
+
+  .botonlogin, .botonlogout {
     background-size: contain;
     cursor: none;
     border: none;
@@ -223,4 +232,5 @@
     float: right;
     outline: 0;
   }
+}
 }
