--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -11,7 +11,7 @@
 <body>
   <div class="prenavbar">
     <button type="button" class="botonmenu" name="menu" onclick="botonmenu()"></button>
-    <a class=botonlogin href="##linklogin##"></a>
+    <a class=##botonlogin## href="##linklogin##"></a>
   </div>
   <div id="navigation-bar" class="navigation-bar">
     <ul>
