--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -11,6 +11,8 @@
 <body>
   <div class="prenavbar">
     <button type="button" class="botonmenu" name="menu" onclick="botonmenu()"></button>
+    <div class="logo">
+    </div>
     <a class=##botonlogin## href="##linklogin##"></a>
   </div>
   <div id="navigation-bar" class="navigation-bar">
@@ -24,5 +26,7 @@
     </ul>
   </div>
   <div class="fondo">
+  </div>
+  <div class="logo ocultarmovil">
   </div>
   <div class="contenido">
