lo del otro día que estaba sin subir

--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -22,7 +22,7 @@
       <li class="navbaritems-left ##localizacion##"><a href="controlador.php?accion=localizacion&id=1">localización</a></li>
       <li class="navbaritems-left ##servicios##"><a href="controlador.php?accion=servicios&id=1">servicios</a></li>
       <li class="navbaritems-right"><a href='##linklogin##'>##loginuser##</a></li>
-      <li class="navbaritems-right"><a href='##linkregistro##'>##reguser##</a></li>
+      <li class="navbaritems-right ##cuentausuario##"><a href='##linkregistro##'>##reguser##</a></li>
     </ul>
   </div>
   <div class="fondo">
