--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,19 +10,18 @@
 
 .logo {
      z-index: 2;
-     position: absolute;
+     position: fixed;
     display: block;
-    width: 6%;
-    padding-top: 6%;
-    margin-left: 7%;
-     margin-top: 1%;
-    background: url(/static/images/logoesquina.svg) no-repeat;
+    width: 8%;
+    padding-top: 8%;
+    margin-left: 4%;
+     margin-top: 3px;
+    background: url(/static/images/logoesquina.png) no-repeat;
     background-size: cover;
-    background-color: #fff;
 }
 
 .contenido {
-    padding-top: 50px;
+    padding-top: 100px;
     /* Depende del tamaño de la cabecera*/
     margin-left: 15%;
     margin-right: 15%;
@@ -76,6 +75,7 @@
     list-style-type: none;
     margin: 0;
 padding-left: 15%;
+padding-top: 2%;
    background-color: #666;
 }
 
@@ -205,9 +205,11 @@ padding-left: 15%;
         display: unset;
     }
     .navigation-bar {
-         padding-left: 0;
         display: none;
         top: 50px;
+    }
+    .navigation-bar ul {
+      padding-left: 0;
     }
     .navbaritems-left {
         float: unset;
