añadida vista de cada producto, la vista del catálogo está casi completa

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,21 @@
 *:focus {
     outline: none;
 }
+/**************************************************************/
+#contenedortabla {
+  display: table;
+  width: 100%;
+}
 
+#contenedorfila {
+  display: table-row;
+}
+
+.resultado {
+  display: table-cell;
+  width: 33%;
+}
+/*************************************************************/
 .logo {
      z-index: 2;
      position: fixed;
